--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,11 @@
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
 <title>prostheticHead.dev</title>
-<meta name=keywords content="Blog,Portfolio,PaperMod">
-<meta name=description content="devlog">
+<meta name=keywords content="Blog,GameDev,Devlog">
+<meta name=description content="devlogs">
 <meta name=author content="Ash">
 <link rel=canonical href=https://prosthetichead.dev/>
 <link crossorigin=anonymous href=/assets/css/stylesheet.min.5e2b4101351c21e906f398ae96901791830f58d430f96f2659dab7eaef7b3cb7.css integrity="sha256-XitBATUcIekG85iulpAXkYMPWNQw+W8mWdq36u97PLc=" rel="preload stylesheet" as=style>
-<link rel=preload href=/apple-touch-icon.png as=image>
 <link rel=icon href=https://prosthetichead.dev/%3Clink%20/%20abs%20url%3E>
 <link rel=icon type=image/png sizes=16x16 href=https://prosthetichead.dev/%3Clink%20/%20abs%20url%3E>
 <link rel=icon type=image/png sizes=32x32 href=https://prosthetichead.dev/%3Clink%20/%20abs%20url%3E>
@@ -23,22 +22,21 @@
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
 </noscript><meta property="og:title" content="prostheticHead.dev">
-<meta property="og:description" content="devlog">
+<meta property="og:description" content="devlogs">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://prosthetichead.dev/"><meta property="og:image" content="https://prosthetichead.dev/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="prostheticHead.dev">
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://prosthetichead.dev/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
 <meta name=twitter:title content="prostheticHead.dev">
-<meta name=twitter:description content="devlog">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"prostheticHead.dev","url":"https://prosthetichead.dev/","description":"devlog","thumbnailUrl":"https://prosthetichead.dev/%3Clink%20/%20abs%20url%3E","sameAs":["https://twitter.com/ph2k","https://ph2k.itch.io","https://github.com/prosthetichead"]}</script>
+<meta name=twitter:description content="devlogs">
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"prostheticHead.dev","url":"https://prosthetichead.dev/","description":"devlogs","thumbnailUrl":"https://prosthetichead.dev/%3Clink%20/%20abs%20url%3E","sameAs":["https://twitter.com/ph2k","https://ph2k.itch.io","https://github.com/prosthetichead"]}</script>
 </head>
 <body class="list dark" id=top>
 <script>localStorage.getItem("pref-theme")==="light"&&document.body.classList.remove('dark')</script>
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://prosthetichead.dev/ accesskey=h title="Home (Alt + H)">
-<img src=/apple-touch-icon.png alt=logo aria-label=logo height=35>Home</a>
+<a href=https://prosthetichead.dev/ accesskey=h title="prostheticHead.dev (Alt + H)">prostheticHead.dev</a>
 <span class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
@@ -51,6 +49,11 @@
 </a>
 </li>
 <li>
+<a href=https://prosthetichead.dev/posts/ title=posts>
+<span>posts</span>
+</a>
+</li>
+<li>
 <a href=https://prosthetichead.dev/categories/ title=categories>
 <span>categories</span>
 </a>
@@ -60,24 +63,13 @@
 <span>tags</span>
 </a>
 </li>
-<li>
-<a href=https://example.org title=example.org>
-<span>example.org</span>
-</a>
-</li>
 </ul>
 </nav>
 </header>
-<main class=main>
-<article class="first-entry home-info">
-<header class=entry-header>
-<h1>Hi there 👋</h1>
-</header>
-<section class=entry-content>
-<p>Welcome to my devlog</p>
-</section>
-<footer class=entry-footer>
-<div class=social-icons>
+<main class=main><div class=profile>
+<div class=profile_inner>
+<h1>prostheticHead.dev</h1>
+<span></span><div class=social-icons>
 <a href=https://twitter.com/ph2k target=_blank rel="noopener noreferrer me" title=Twitter><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9.0 01-3.14 1.53 4.48 4.48.0 00-7.86 3v1A10.66 10.66.0 013 4s-4 9 5 13a11.64 11.64.0 01-7 2c9 5 20 0 20-11.5a4.5 4.5.0 00-.08-.83A7.72 7.72.0 0023 3z"/></svg>
 </a>
 <a href=https://ph2k.itch.io target=_blank rel="noopener noreferrer me" title=Itchio><svg xmlns="http://www.w3.org/2000/svg" fill="currentcolor" viewBox="0 0 245.371 220.736"><path d="M31.99 1.365C21.287 7.72.2 31.945.0 38.298v10.516C0 62.144 12.46 73.86 23.773 73.86c13.584.0 24.902-11.258 24.903-24.62.0 13.362 10.93 24.62 24.515 24.62 13.586.0 24.165-11.258 24.165-24.62.0 13.362 11.622 24.62 25.207 24.62h.246c13.586.0 25.208-11.258 25.208-24.62.0 13.362 10.58 24.62 24.164 24.62 13.585.0 24.515-11.258 24.515-24.62.0 13.362 11.32 24.62 24.903 24.62 11.313.0 23.773-11.714 23.773-25.046V38.298c-.2-6.354-21.287-30.58-31.988-36.933C180.118.197 157.056-.005 122.685.0c-34.37.003-81.228.54-90.697 1.365zm65.194 66.217a28.025 28.025.0 01-4.78 6.155c-5.128 5.014-12.157 8.122-19.906 8.122A28.482 28.482.0 0152.55 73.733c-1.858-1.82-3.27-3.766-4.563-6.032l-.006.004c-1.292 2.27-3.092 4.215-4.954 6.037a28.5 28.5.0 01-19.948 8.12c-.934.0-1.906-.258-2.692-.528-1.092 11.372-1.553 22.24-1.716 30.164l-.002.045c-.02 4.024-.04 7.333-.06 11.93.21 23.86-2.363 77.334 10.52 90.473 19.964 4.655 56.7 6.775 93.555 6.788h.006c36.854-.013 73.59-2.133 93.554-6.788 12.883-13.14 10.31-66.614 10.52-90.474-.022-4.596-.04-7.905-.06-11.93l-.003-.045c-.162-7.926-.623-18.793-1.715-30.165-.786.27-1.757.528-2.692.528a28.5 28.5.0 01-19.948-8.12c-1.862-1.822-3.662-3.766-4.955-6.037l-.006-.004c-1.294 2.266-2.705 4.213-4.563 6.032a28.48 28.48.0 01-19.947 8.125c-7.748.0-14.778-3.11-19.906-8.123a28.025 28.025.0 01-4.78-6.155 27.99 27.99.0 01-4.736 6.155 28.49 28.49.0 01-19.95 8.124c-.27.0-.54-.012-.81-.02h-.007c-.27.008-.54.02-.813.02a28.49 28.49.0 01-19.95-8.123 27.992 27.992.0 01-4.736-6.155zm-20.486 26.49-.002.01h.015c8.113.017 15.32.0 24.25 9.746 7.028-.737 14.372-1.105 21.722-1.094h.006c7.35-.01 14.694.357 21.723 1.094 8.93-9.747 16.137-9.73 24.25-9.746h.014l-.002-.01c3.833.0 19.166.0 29.85 30.007L210 165.244c8.504 30.624-2.723 31.373-16.727 31.4-20.768-.773-32.267-15.855-32.267-30.935-11.496 1.884-24.907 2.826-38.318 2.827h-.006c-13.412.0-26.823-.943-38.318-2.827.0 15.08-11.5 30.162-32.267 30.935-14.004-.027-25.23-.775-16.726-31.4L46.85 124.08C57.534 94.073 72.867 94.073 76.7 94.073zm45.985 23.582v.006c-.02.02-21.863 20.08-25.79 27.215l14.304-.573v12.474c0 .584 5.74.346 11.486.08h.006c5.744.266 11.485.504 11.485-.08v-12.474l14.304.573c-3.928-7.135-25.79-27.215-25.79-27.215v-.006l-.003.002z"/></svg>
@@ -85,8 +77,19 @@
 <a href=https://github.com/prosthetichead target=_blank rel="noopener noreferrer me" title=Github><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg>
 </a>
 </div>
-</footer>
-</article>
+<div class=buttons>
+<a class=button href=posts rel=noopener title=Posts>
+<span class=button-inner>Posts</span>
+</a>
+<a class=button href=archives rel=noopener title=Archives>
+<span class=button-inner>Archives</span>
+</a>
+<a class=button href=tags rel=noopener title=Tags>
+<span class=button-inner>Tags</span>
+</a>
+</div>
+</div>
+</div>
 </main>
 <footer class=footer>
 <span>&copy; 2021 <a href=https://prosthetichead.dev/>prostheticHead.dev</a></span>
