--- a/public/search/index.html
+++ b/public/search/index.html
@@ -8,8 +8,7 @@
 <meta name=description content="search">
 <meta name=author content="Ash">
 <link rel=canonical href=https://prosthetichead.dev/search/>
-<link crossorigin=anonymous href=/assets/css/stylesheet.min.5e2b4101351c21e906f398ae96901791830f58d430f96f2659dab7eaef7b3cb7.css integrity="sha256-XitBATUcIekG85iulpAXkYMPWNQw+W8mWdq36u97PLc=" rel="preload stylesheet" as=style>
-<link rel=preload href=/apple-touch-icon.png as=image><link crossorigin=anonymous rel=preload as=fetch href=../index.json>
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.5e2b4101351c21e906f398ae96901791830f58d430f96f2659dab7eaef7b3cb7.css integrity="sha256-XitBATUcIekG85iulpAXkYMPWNQw+W8mWdq36u97PLc=" rel="preload stylesheet" as=style><link crossorigin=anonymous rel=preload as=fetch href=../index.json>
 <script defer crossorigin=anonymous src=/assets/js/search.min.a6198b2394defa4b8c3af709e5f4a2f6014b6e718ec47b96a44f2bb378e505d9.js integrity="sha256-phmLI5Te+kuMOvcJ5fSi9gFLbnGOxHuWpE8rs3jlBdk="></script>
 <link rel=icon href=https://prosthetichead.dev/%3Clink%20/%20abs%20url%3E>
 <link rel=icon type=image/png sizes=16x16 href=https://prosthetichead.dev/%3Clink%20/%20abs%20url%3E>
@@ -38,8 +37,7 @@
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://prosthetichead.dev/ accesskey=h title="Home (Alt + H)">
-<img src=/apple-touch-icon.png alt=logo aria-label=logo height=35>Home</a>
+<a href=https://prosthetichead.dev/ accesskey=h title="prostheticHead.dev (Alt + H)">prostheticHead.dev</a>
 <span class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
@@ -52,6 +50,11 @@
 </a>
 </li>
 <li>
+<a href=https://prosthetichead.dev/posts/ title=posts>
+<span>posts</span>
+</a>
+</li>
+<li>
 <a href=https://prosthetichead.dev/categories/ title=categories>
 <span>categories</span>
 </a>
@@ -59,11 +62,6 @@
 <li>
 <a href=https://prosthetichead.dev/tags/ title=tags>
 <span>tags</span>
-</a>
-</li>
-<li>
-<a href=https://example.org title=example.org>
-<span>example.org</span>
 </a>
 </li>
 </ul>
